--- a/index.html
+++ b/index.html
@@ -4,14 +4,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Portfolio</title>
 </head>
 <body>
-  <h1>Testing...1234</h1>
-  <h1>Testing...1234</h1>
-  <h1>Testing...1234</h1>
-  <h1>Testing...1234</h1>
-  <h1>Testing...1234</h1>
+  <header>
+    <a href="" class="logo">Mariano</a>
+
+    <nav>
+      <ul>
+        <li>
+          <a href="#" class="nav-links">home</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links">work</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links">about</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links">contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="wrapper">
+    <section class="intro">
+
+       <div class="profile-pic">
+         <img src="https://source.unsplash.com/random/200x200" alt="">Profile Pic
+       </div>
+       <div class="bio">
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, totam?</p>
+      </div>
+
+    </section>
+
+    <section class="work">
+      <h4>lorem</h4>
+      <div class="inner">
+        <div class="projects">
+        <ul>
+          <li><a href="#" class="items"></a>Item1</li>
+          <li><a href="#" class="items"></a>Item2</li>
+          <li><a href="#" class="items"></a>Item3</li>
+          <li><a href="#" class="items"></a>Item4</li>
+        </ul>
+      </div>
+      </div>
+
+    </section>
+
+    <section class="about">
+      <p>lorem</p>
+    </section>
+
+    <section class="contact">
+      <p>lorem</p>
+    </section>
+
+  </div>
+
 </body>
+  <footer>
+    <div>
+      Copyright &copy; Mariano Vazquez | 2019
+    </div>
+
+  </footer>
 </html>
