added & styled project section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="intro">
 
        <div class="profile-pic">
-         <img src="https://source.unsplash.com/random/200x200" alt="">Profile Pic
+         <img src="https://source.unsplash.com/random/200x200" alt="">
        </div>
        <div class="bio">
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, totam?</p>
@@ -42,22 +42,29 @@
     </section>
 
     <section class="work">
-      <h4>lorem</h4>
       <div class="inner">
+        <h4>Check out some of my work</h4>
+        </div>
         <div class="projects">
-        <ul>
-          <li><a href="#" class="items"></a>Item1</li>
-          <li><a href="#" class="items"></a>Item2</li>
-          <li><a href="#" class="items"></a>Item3</li>
-          <li><a href="#" class="items"></a>Item4</li>
-        </ul>
-      </div>
+          <a href="http://google.com" class="items">
+              <img src="https://source.unsplash.com/random/200x202" alt="">
+          </a>
+          <a href="http://google.com" class="items">
+              <img src="https://source.unsplash.com/random/200x203" alt="">
+          </a>
+          <a href="http://google.com" class="items">
+              <img src="https://source.unsplash.com/random/200x204" alt="">
+          </a>
+          <a href="http://google.com" class="items">
+              <img src="https://source.unsplash.com/random/200x205" alt="">
+          </a>
+
       </div>
 
     </section>
 
     <section class="about">
-      <p>lorem</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima assumenda perferendis vel odit. Et adipisci, quae sunt aliquid commodi voluptate, fuga modi dignissimos? Temporibus tempora nulla eum, quae. Cum, eos.</p>
     </section>
 
     <section class="contact">
