Responsive first layout in progress

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 
        <div class="profile-pic">
          <img src="https://source.unsplash.com/random/200x200" alt="">
+          <h2>Mariano Vazquez</h2>
+          <p>Front End Developer | QA Manager</p>
        </div>
-       <div class="bio">
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, totam?</p>
-      </div>
 
     </section>
 
