--- a/index.html
+++ b/index.html
@@ -1,82 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/main.css">
-  <title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mariano Vazquez | Front End Engineer</title>
+    <!-- css -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-  <header>
-    <a href="" class="logo">Mariano</a>
 
-    <nav>
-      <ul>
-        <li>
-          <a href="#" class="nav-links">home</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links">work</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links">about</a>
-        </li>
-        <li>
-          <a href="#" class="nav-links">contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <!-- menu bar -->
+    <header>
+      <nav class="menu">
+        <ul class="menu">
+          <li>
+            <a href="#home">Home</a>
+          </li>
+          <li>
+            <a href="#overview">Overview</a>
+          </li>
+          <li>
+            <a href="#features">Features</a>
+          </li>
+          <li>
+            <a href="#downloads">Download</a>
+          </li>
+        </ul>
+        <a id="toggle-btn">SLICK</a>
+      </nav>
+    </header>
 
-  <div class="wrapper">
-    <section class="intro">
+    <!-- Landing page content -->
 
-       <div class="profile-pic">
-         <img src="https://source.unsplash.com/random/200x200" alt="">
-          <h2>Mariano Vazquez</h2>
-          <p>Front End Developer | QA Manager</p>
-       </div>
-
-    </section>
-
-    <section class="work">
-      <div class="inner">
-        <h4>Check out some of my work</h4>
-        </div>
-        <div class="projects">
-          <a href="http://google.com" class="items">
-              <img src="https://source.unsplash.com/random/200x202" alt="">
-          </a>
-          <a href="http://google.com" class="items">
-              <img src="https://source.unsplash.com/random/200x203" alt="">
-          </a>
-          <a href="http://google.com" class="items">
-              <img src="https://source.unsplash.com/random/200x204" alt="">
-          </a>
-          <a href="http://google.com" class="items">
-              <img src="https://source.unsplash.com/random/200x205" alt="">
-          </a>
-
+    <div class="section-hero">
+      <div class="container">
+        <h1>Slick App</h1>
+        <h2><i class="fa fa-camera" aria-hidden="true"</i>Start your amazing stuff through Slick</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo hic laborum ducimus ipsam, nulla, error repellendus veniam quis iure eligendi reprehenderit blanditiis animi delectus aliquam voluptatibus ullam? Maiores, quibusdam impedit!</p>
       </div>
-
-    </section>
-
-    <section class="about">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima assumenda perferendis vel odit. Et adipisci, quae sunt aliquid commodi voluptate, fuga modi dignissimos? Temporibus tempora nulla eum, quae. Cum, eos.</p>
-    </section>
-
-    <section class="contact">
-      <p>lorem</p>
-    </section>
-
-  </div>
-
-</body>
-  <footer>
-    <div>
-      Copyright &copy; Mariano Vazquez | 2019
     </div>
 
-  </footer>
+
+    <!-- overview section -->
+
+    <div id="overview" class="section">
+      <div class="container">
+        <div class="overview-content">
+
+        <div>
+          <h2>Overview</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae praesentium ex est unde dolores accusantium eius temporibus laudantium porro cupiditate.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quidem corporis debitis cupiditate consectetur sunt fuga eos blanditiis quibusdam assumenda.</p>
+          <button type="button">View More</button>
+        </div>
+
+        <div>
+          <img src="images/overview.jpg" alt="">
+        </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- about section -->
+
+    <div id="about" class="section">
+      <div class="container">
+        <h2>
+          <i class="fa fa-camera"></i>slick
+        </h2>
+        <h3>Capture the moments</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur nihil quis consequuntur repellendus officiis itaque est dolore animi iure perspiciatis?</p>
+        <img src="images/about.jpg" alt="">
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <script src="js/script.js"></script>
+</body>
 </html>
