new sections added

--- a/index.html
+++ b/index.html
@@ -86,10 +86,41 @@
       </div>
     </div>
 
+    <!-- features section -->
 
+    <div id="features" class="section">
+      <div class="container">
+        <div class="features-content">
+          <div>
+            <img src="images/features.jpg" alt="">
+          </div>
+          <div>
+            <h2>Features</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea molestiae, ex perspiciatis est eos, aut assumenda provident error neque iste.</p>
+            <h4>&#10148; Easy Notification</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
+            <h4>&#10148; Fully Responsive</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
+            <h4>&#10148; Editable Layout</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div id="subscribe" class="section">
+      <div class="container">
+        <h2>Subscribe to our newsletter</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos suscipit, totam perspiciatis laboriosam, ratione earum obcaecati voluptatum ipsa non!</p>
+        <input type="text" placeholder="Enter your email">
+        <br>
+        <button type="button">Notify Me</button>
+      </div>
+    </div>
 
-
+    <footer>
+      <span>created by Mariano Vazquez</span>
+    </footer>
 
 
 
