--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mariano Vazquez | Front End Engineer</title>
     <!-- css -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -22,121 +22,138 @@
 
     <!-- menu bar -->
     <header>
-      <nav class="menu">
-        <ul class="menu">
-          <li>
-            <a href="#home">Home</a>
-          </li>
-          <li>
-            <a href="#overview">Overview</a>
-          </li>
-          <li>
-            <a href="#features">Features</a>
-          </li>
-          <li>
-            <a href="#downloads">Download</a>
-          </li>
+      <!-- <div class="hero-image">
+        <img src="images/logo.png" alt="Portfolio Logo" class="logo">
+      </div> -->
+
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contact</a></li>
+
         </ul>
-        <a id="toggle-btn">SLICK</a>
       </nav>
     </header>
 
-    <!-- Landing page content -->
+  <!-- home hero section -->
 
-    <div class="section-hero">
-      <div class="container">
-        <h1>Slick App</h1>
-        <h2><i class="fa fa-camera" aria-hidden="true"</i>Start your amazing stuff through Slick</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo hic laborum ducimus ipsam, nulla, error repellendus veniam quis iure eligendi reprehenderit blanditiis animi delectus aliquam voluptatibus ullam? Maiores, quibusdam impedit!</p>
-      </div>
+  <section class="home-hero">
+
+    <div class="container">
+      <h1 class="title">Making things look great
+        <span>for companies who make great stuff</span>
+      </h1>
+      <a href="#" class="button button-accent">See my work</a>
     </div>
 
+  </section>
 
-    <!-- overview section -->
+<!-- about me section -->
 
-    <div id="overview" class="section">
-      <div class="container">
-        <div class="overview-content">
+  <section class="home-about">
+    <div class="home-about-textbox">
+      <h1>A little about me..</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repellendus veniam, molestias architecto debitis placeat, in eaque inventore laudantium neque.</p>
+      <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Explicabo facilis odio non sunt. Voluptatibus sint dolore maxime dolorem perspiciatis repudiandae.</p>
+    </div>
+  </section>
 
-        <div>
-          <h2>Overview</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae praesentium ex est unde dolores accusantium eius temporibus laudantium porro cupiditate.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quidem corporis debitis cupiditate consectetur sunt fuga eos blanditiis quibusdam assumenda.</p>
-          <button type="button">View More</button>
-        </div>
+  <!-- Some of my work section -->
 
-        <div>
-          <img src="images/overview.jpg" alt="">
-        </div>
+  <section class="portfolio">
+    <h1>Some of my work</h1>
 
-        </div>
-      </div>
+    <!-- portfolio item 1 -->
+    <figure class="port-item">
+      <img src="images/portfolio-01.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+    <!-- portfolio item 2 -->
+    <figure class="port-item">
+      <img src="images/portfolio-02.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+    <!-- portfolio item 3 -->
+    <figure class="port-item">
+      <img src="images/portfolio-03.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+    <!-- portfolio item 4 -->
+    <figure class="port-item">
+      <img src="images/portfolio-04.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+    <!-- portfolio item 5 -->
+    <figure class="port-item">
+      <img src="images/portfolio-05.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+    <!-- portfolio item 6 -->
+    <figure class="port-item">
+      <img src="images/portfolio-06.jpg" alt="portfolio item">
+      <figcaption class="port-desc">
+        <p>Project Description</p>
+        <a href="#" class="button button-accent button-small">Project Details</a>
+      </figcaption>
+    </figure>
+
+  </section>
+
+  <footer>
+
+    <div class="col-3">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque repellat magnam omnis ullam eaque cum, eum. Veritatis odio minima repellat.
+      </p>
     </div>
 
-    <!-- about section -->
-
-    <div id="about" class="section">
-      <div class="container">
-        <h2>
-          <i class="fa fa-camera"></i>slick
-        </h2>
-        <h3>Capture the moments</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur nihil quis consequuntur repellendus officiis itaque est dolore animi iure perspiciatis?</p>
-        <img src="images/about.jpg" alt="">
-      </div>
+    <div class="col-1">
+      <ul class="unstyled-list">
+        <li><strong>Item 1</strong></li>
+        <li>Item2</li>
+        <li>Item3</li>
+      </ul>
     </div>
 
-    <!-- features section -->
-
-    <div id="features" class="section">
-      <div class="container">
-        <div class="features-content">
-          <div>
-            <img src="images/features.jpg" alt="">
-          </div>
-          <div>
-            <h2>Features</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea molestiae, ex perspiciatis est eos, aut assumenda provident error neque iste.</p>
-            <h4>&#10148; Easy Notification</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
-            <h4>&#10148; Fully Responsive</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
-            <h4>&#10148; Editable Layout</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facere.</p>
-          </div>
-        </div>
-      </div>
+    <div class="col-1">
+      <ul class="unstyled-list">
+        <li><strong>Item 1</strong></li>
+        <li>Item2</li>
+        <li>Item3</li>
+      </ul>
     </div>
 
-    <div id="subscribe" class="section">
-      <div class="container">
-        <h2>Subscribe to our newsletter</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos suscipit, totam perspiciatis laboriosam, ratione earum obcaecati voluptatum ipsa non!</p>
-        <input type="text" placeholder="Enter your email">
-        <br>
-        <button type="button">Notify Me</button>
-      </div>
+    <div class="col-1">
+      <ul class="unstyled-list">
+        <li><strong>Item 1</strong></li>
+        <li>Item2</li>
+        <li>Item3</li>
+      </ul>
     </div>
 
-    <footer>
-      <span>created by Mariano Vazquez</span>
-    </footer>
+  </footer>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <script src="js/script.js"></script>
 </body>
 </html>
