added media queries for 768px screen size

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       <img src="images/portfolio-01.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
@@ -79,7 +80,8 @@
       <img src="images/portfolio-02.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
@@ -88,7 +90,8 @@
       <img src="images/portfolio-03.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
@@ -97,7 +100,8 @@
       <img src="images/portfolio-04.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
@@ -106,7 +110,8 @@
       <img src="images/portfolio-05.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
@@ -115,7 +120,8 @@
       <img src="images/portfolio-06.jpg" alt="portfolio item">
       <figcaption class="port-desc">
         <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Project Details</a>
+        <a href="#" class="button button-accent button-small">Demo site</a>
+        <a href="#" class="button button-accent button-small">See code</a>
       </figcaption>
     </figure>
 
