about section done

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
     <section class="home-about">
       <div class="home-about-textbox">
-        <h1>A little about me..</h1>
+        <h1>A little about me</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repellendus veniam, molestias architecto debitis placeat, in eaque inventore laudantium neque.</p>
         <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Explicabo facilis odio non sunt. Voluptatibus sint dolore maxime dolorem perspiciatis repudiandae.</p>
       </div>
