added contact us & styled footer section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
 
   </section>
 
+
+  <section class="cta">
+    <div class="container">
+      <h1 class="title title-cta">Like what you see ?
+        <!-- <span>Drop me a line!</span> -->
+      </h1>
+      <a href="#" class="button button-contact-us">Hire me</a>
+    </div>
+  </section>
+
   <footer>
 
     <div class="col-3">
