--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mariano Vazquez | Front End Engineer</title>
-    <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
 
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
     <!-- font awesome icons -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -130,17 +128,76 @@
   </section>
 
 
-  <section class="cta">
+  <section class="experience" id="experience">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Work Experience</h1>
+        <h6>Past and current jobs</h6>
+      </div>
+      <div class="timeline" data-aos="fade-down" data-aos-delay="300">
+        <ul>
+          <li class="date" data-date="2017 - Present">
+            <h1>Google</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="date" data-date="2015 - 2017">
+            <h1>RGA Media</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+          <li class="date" data-date="2013 - 2015">
+            <h1>HSBC Bank</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- <section class="cta">
     <div class="container">
       <h1 class="title title-cta">Like what you see ?
-        <!-- <span>Drop me a line!</span> -->
+        <span>Drop me a line!</span>
       </h1>
       <a href="#" class="button button-contact-us">Hire me</a>
     </div>
+  </section> -->
+
+  <section class="contact" id="contact">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Contact</h1>
+        <h6>Let's work together</h6>
+      </div>
+      <form action="" data-aos="fade-up" data-aos-delay="300">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name..." required>
+        <label for="name">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email..." required>
+        <label for="service">Services:</label>
+        <select name="services" id="service">
+          <option value="">Web Design</option>
+          <option value="">Web Development</option>
+          <option value="">Quality Assurance</option>
+        </select>
+        <label for="subject">Subject:</label>
+        <textarea name="subject" id="subject" rows="10" cols="10"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </section>
 
-  <footer>
-
+  <footer class="copyright">
+    <div class="up" id="up">
+      <i class="fas fa-chevron-up"></i>
+    </div>
     <div class="col-3">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque repellat magnam omnis ullam eaque cum, eum. Veritatis odio minima repellat.
       </p>
@@ -172,6 +229,9 @@
 
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
