final touches to styling

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#contact">Contact</a></li>
 
         </ul>
       </nav>
@@ -43,7 +44,7 @@
       <h1 class="title">Making things look great
         <span>for companies who make great stuff</span>
       </h1>
-      <a href="#" class="button button-accent">See my work</a>
+      <a href="#work" class="button button-accent">See my work</a>
     </div>
 
   </section>
@@ -51,7 +52,7 @@
 <!-- about me section -->
 
   <div class="container">
-    <section class="home-about">
+    <section id="about" class="home-about">
       <div class="home-about-textbox">
         <h1>A little about me</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repellendus veniam, molestias architecto debitis placeat, in eaque inventore laudantium neque.</p>
@@ -62,7 +63,7 @@
 
   <!-- Some of my work section -->
 
-  <section class="portfolio">
+  <section id="work" class="portfolio">
     <h1>Some of my work</h1>
 
     <!-- portfolio item 1 -->
@@ -195,38 +196,24 @@
   </section>
 
   <footer class="copyright">
-    <div class="up" id="up">
-      <i class="fas fa-chevron-up"></i>
-    </div>
-    <div class="col-3">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque repellat magnam omnis ullam eaque cum, eum. Veritatis odio minima repellat.
-      </p>
-    </div>
+    <div class="container">
+      <div class="up" id="up">
+        <i class="fas fa-chevron-up"></i>
+      </div>
+      <div class="col-3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque repellat magnam omnis ullam eaque cum, eum. Veritatis odio minima repellat.
+        </p>
+      </div>
 
-    <div class="col-1">
-      <ul class="unstyled-list">
-        <li><strong>Item 1</strong></li>
-        <li>Item2</li>
-        <li>Item3</li>
-      </ul>
-    </div>
+      <div class="col-3">
+        <ul class="unstyled-list">
+          <li><strong>About</strong></li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </div>
 
-    <div class="col-1">
-      <ul class="unstyled-list">
-        <li><strong>Item 1</strong></li>
-        <li>Item2</li>
-        <li>Item3</li>
-      </ul>
     </div>
-
-    <div class="col-1">
-      <ul class="unstyled-list">
-        <li><strong>Item 1</strong></li>
-        <li>Item2</li>
-        <li>Item3</li>
-      </ul>
-    </div>
-
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
