added sticky nav bar

--- a/index.html
+++ b/index.html
@@ -48,84 +48,85 @@
     </div>
 
   </section>
-
-<!-- about me section -->
-
-  <div class="container">
-    <section id="about" class="home-about">
-      <div class="home-about-textbox">
-        <h1>A little about me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repellendus veniam, molestias architecto debitis placeat, in eaque inventore laudantium neque.</p>
-        <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Explicabo facilis odio non sunt. Voluptatibus sint dolore maxime dolorem perspiciatis repudiandae.</p>
+    <!-- about me section -->
+    <div class="container">
+      <div id="about" class="container home">
+        <section class="home-about">
+          <div class="home-about-textbox">
+            <h1>A little about me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi repellendus veniam, molestias architecto debitis placeat, in eaque inventore laudantium neque.</p>
+            <p><strong>Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit. Explicabo facilis odio non sunt. Voluptatibus sint dolore maxime dolorem perspiciatis repudiandae.</p>
+          </div>
+        </section>
       </div>
-    </section>
-  </div>
+    </div>
 
   <!-- Some of my work section -->
 
-  <section id="work" class="portfolio">
-    <h1>Some of my work</h1>
+  <section class="portfolio" id="work">
+    <div class="container">
+      <h1>Some of my work</h1>
 
-    <!-- portfolio item 1 -->
-    <figure class="port-item">
-      <img src="images/portfolio-01.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
+      <!-- portfolio item 1 -->
+      <figure class="port-item">
+        <img src="images/portfolio-01.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
 
-    <!-- portfolio item 2 -->
-    <figure class="port-item">
-      <img src="images/portfolio-02.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
+      <!-- portfolio item 2 -->
+      <figure class="port-item">
+        <img src="images/portfolio-02.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
 
-    <!-- portfolio item 3 -->
-    <figure class="port-item">
-      <img src="images/portfolio-03.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
+      <!-- portfolio item 3 -->
+      <figure class="port-item">
+        <img src="images/portfolio-03.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
 
-    <!-- portfolio item 4 -->
-    <figure class="port-item">
-      <img src="images/portfolio-04.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
+      <!-- portfolio item 4 -->
+      <figure class="port-item">
+        <img src="images/portfolio-04.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
 
-    <!-- portfolio item 5 -->
-    <figure class="port-item">
-      <img src="images/portfolio-05.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
+      <!-- portfolio item 5 -->
+      <figure class="port-item">
+        <img src="images/portfolio-05.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
 
-    <!-- portfolio item 6 -->
-    <figure class="port-item">
-      <img src="images/portfolio-06.jpg" alt="portfolio item">
-      <figcaption class="port-desc">
-        <p>Project Description</p>
-        <a href="#" class="button button-accent button-small">Demo site</a>
-        <a href="#" class="button button-accent button-small">See code</a>
-      </figcaption>
-    </figure>
-
+      <!-- portfolio item 6 -->
+      <figure class="port-item">
+        <img src="images/portfolio-06.jpg" alt="portfolio item">
+        <figcaption class="port-desc">
+          <p>Project Description</p>
+          <a href="#" class="button button-accent button-small">Demo site</a>
+          <a href="#" class="button button-accent button-small">See code</a>
+        </figcaption>
+      </figure>
+    </div>
   </section>
 
 
@@ -218,7 +219,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="main.js"></script>
+  <script src="../js/main.js"></script>
 
 </body>
 </html>
