added social icons to nav bar

--- a/index.html
+++ b/index.html
@@ -17,21 +17,26 @@
 
 </head>
 <body>
+  <!-- menu bar -->
+  <header>
+    <!-- social icons -->
+    <div class="social-icons">
 
-    <!-- menu bar -->
-    <header>
-      <!-- <div class="hero-image">
-        <img src="images/logo.png" alt="Portfolio Logo" class="logo">
-      </div> -->
+      <a href="http://linkedin.com">
+        <i class="fab fa-linkedin-in fa-2x"></i>
+      </a>
+      <a href="#">
+        <i class="fab fa-github fa-2x"></i>
+      </a>
 
-      <nav>
+    </div>
+    <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#contact">Contact</a></li>
-
         </ul>
       </nav>
     </header>
