added new hamburger menu

--- a/index.html
+++ b/index.html
@@ -17,33 +17,42 @@
 
 </head>
 <body>
+
+  <div class="wrapper">
+
   <!-- menu bar -->
-  <header>
-    <!-- social icons -->
-    <div class="social-icons">
+    <header>
+      <!-- social icons -->
+      <nav>
 
-      <a href="http://linkedin.com">
-        <i class="fab fa-linkedin-in fa-2x"></i>
-      </a>
-      <a href="#">
-        <i class="fab fa-github fa-2x"></i>
-      </a>
+      <div class="social-icons">
+        <a href="http://linkedin.com">
+          <i class="fab fa-linkedin-in fa-2x"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+      </div>
 
-    </div>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+        <div class="menu-icon">
+          <i class="fas fa-bars fa-2x"></i>
+        </div>
+
+        <div class="menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
-
+  </div>
   <!-- home hero section -->
 
-  <section class="home-hero">
+  <!-- <section class="home-hero">
 
     <div class="container">
       <h1 class="title">Making things look great
@@ -52,7 +61,7 @@
       <a href="#work" class="button button-accent">See my work</a>
     </div>
 
-  </section>
+  </section> -->
     <!-- about me section -->
     <div class="container">
       <div id="about" class="container home">
@@ -223,7 +232,6 @@
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="../js/main.js"></script>
 
 </body>
