--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
 </head>
 <body>
 
-  <div class="wrapper">
-
   <!-- menu bar -->
     <header>
       <!-- social icons -->
       <nav>
 
       <div class="social-icons">
-        <a href="http://linkedin.com">
+        <a href="https://www.linkedin.com/in/mariano-vazquez/" target="_blank">
           <i class="fab fa-linkedin-in fa-2x"></i>
         </a>
-        <a href="#">
+        <a href="https://github.com/pyrish" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
@@ -49,7 +47,7 @@
         </div>
       </nav>
     </header>
-  </div>
+
   <!-- home hero section -->
 
   <!-- <section class="home-hero">
@@ -232,6 +230,7 @@
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   <script src="../js/main.js"></script>
 
 </body>
