--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="mariano">
 
-      <title>Mariano Vazquez | Software Test Manager</title>
+      <title>Work | Mariano Vazquez | Software Test Manager</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="css/style.css">
@@ -17,9 +17,6 @@
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
-
-      <!-- terminal effect -->
-      <script src="../js/t.min.js"></script>
 
       <!-- for on scroll animations -->
       <link rel="stylesheet" href="css/animate.css">
@@ -32,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">Mariano Vazquez | Software Test Manager</a>
+                        <a href="index.html">mariano vazquez | Software Test Manager</a>
                   </span>
 
                   <ul id="menu">
@@ -58,30 +55,31 @@
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
+
             <!--------------- navbar ends here --------------->
 
-
+            <div class="whitespace"></div>
 
             <!--------------- hero section starts here --------------->
-            <div class="hero">
-                  <div class="header">
-                        <h1 class="line anim-typewriter">All code is guilty, until proven innocent...</h1>
+            <div class="container">
+                  <div class="hero-content">
+                        <br><br>
+
+                        <div class="row">
+                              <div class="col-lg-8">
+
+                                    <h3 class="wow fadeInUp" data-wow-delay="1s">work.</h3><br>
+                                    <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
+
+                              </div>
+                        </div>
                   </div>
             </div>
 
-            <div class="scroll-down"></div>
             <!--------------- hero section ends here --------------->
-
-
 
             <!--------------- projects section starts here --------------->
             <div class="container-fluid">
-                  <br><br><br>
-
-                  <h6>Selected projects</h6>
-
-                  <div class="vertical"></div>
-                  <br>
 
                   <div class="whitespace"></div>
                   <div class="whitespace"></div>
@@ -89,7 +87,7 @@
                   <div class="row">
                         <div class="col-lg-8"></div>
 
-                        <div class="col-lg-4 project project1 wow fadeInUp" onclick="location.href='project.html'"></div>
+                        <div class="col-lg-4 project project1 wow fadeInUp" data-wow-delay="1.4s" onclick="location.href='project.html'"></div>
                   </div>
 
                   <div class="whitespace"></div>
@@ -122,9 +120,8 @@
 
                   <div class="whitespace"></div>
             </div>
+
             <!--------------- projects section ends here --------------->
-
-
 
             <!--------------- footer starts here --------------->
             <div class="footer">
@@ -150,17 +147,17 @@
                         <div class="info">
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">See my code</p>
+                                          <p class="wow fadeInUp">see my code</p>
                                           <h4 class="wow fadeInUp" data-wow-delay="0.2s">github.com/pyrish</h4>
                                           <br><br>
                                     </div>
 
                                     <div class="col-lg-4" id="media">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">more about me</p>
+                                          <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">linkedin</li>
-                                                <li id="gh" class="wow fadeInUp" data-wow-delay="0.6s">github</li>
+                                                <li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">lk</li>
+                                                <li id="gh" class="wow fadeInUp" data-wow-delay="0.6s">gh</li>
                                                 <li id="cv" class="wow fadeInUp" data-wow-delay="0.8s">CV</li>
                                                 <!-- <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li> -->
                                           </ul>
@@ -177,6 +174,7 @@
                         </div>
                   </div>
             </div>
+
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
@@ -190,7 +188,6 @@
       <script type="text/javascript">
 
       // navigation starts here
-
       $("#toggle").click(function() {
             $(this).toggleClass('on');
             $("#resize").toggleClass("active");
@@ -226,6 +223,7 @@
       // nav animation ends
 
       new WOW().init();
+
 
       </script>
 </body>
