updated typewriter and contact us msg

--- a/work.html
+++ b/work.html
@@ -153,7 +153,7 @@
                                     </div>
 
                                     <div class="col-lg-4" id="media">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
+                                          <p class="wow fadeInUp" data-wow-delay="0s">more about me</p>
 
                                           <ul>
                                                 <li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">lk</li>
