--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">All code is guilty, until proven innocent...</h1>
+                        <h1 class="line anim-typewriter">All code is guilty, until proven innocent</h1>
                   </div>
             </div>
 
