added links to code and demo for natours project

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                   <div class="row">
                         <div class="col-lg-8"></div>
 
-                        <div class="col-lg-4 project project1 wow fadeInUp" onclick="location.href='natours/index.html'"></div>
+                        <div class="col-lg-4 project project1 wow fadeInUp">
+                          <a href="https://pyrish.github.io/natours/index.html" class="project1-links" target="_blank">Demo</a>
+                          <a href="https://github.com/pyrish/pyrish.github.io/tree/master/natours" class="project1-links" target="_blank">Code</a>
+                        </div>
                   </div>
 
                   <div class="whitespace"></div>
