--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
                         <div class="info">
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">See my code</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">github.com/pyrish</h4>
+                                          <p class="wow fadeInUp">See my code
+                                          </p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">
+                                          <a class="links" href="https://github.com/pyrish/"  target="_blank">github.com/pyrish</a>
+                                          </h4>
                                           <br><br>
                                     </div>
 
@@ -162,8 +165,10 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">more about me</p>
 
                                           <ul>
-                                                <li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">linkedin</li>
-                                                <li id="gh" class="wow fadeInUp" data-wow-delay="0.6s">github</li>
+                                                <li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">
+                                                  <a class="links" href="https://www.linkedin.com/in/mariano-vazquez/"  target="_blank">linkedin</a></li>
+                                                <li id="gh" class="wow fadeInUp" data-wow-delay="0.4s">
+                                                  <a class="links" href="https://github.com/pyrish/"  target="_blank">github</a></li>
                                                 <li id="cv" class="wow fadeInUp" data-wow-delay="0.8s">CV</li>
                                                 <!-- <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li> -->
                                           </ul>
