updated link to CV

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                                                   <a class="links" href="https://www.linkedin.com/in/mariano-vazquez/"  target="_blank">linkedin</a></li>
                                                 <li id="gh" class="wow fadeInUp" data-wow-delay="0.4s">
                                                   <a class="links" href="https://github.com/pyrish/"  target="_blank">github</a></li>
-                                                <li id="cv" class="wow fadeInUp" data-wow-delay="0.8s">CV</li>
+                                                <li id="cv" class="wow fadeInUp" data-wow-delay="0.8s">
+                                                  <a class="links" href="https://github.com/pyrish/pyrish.github.io/blob/master/CV.pdf"  target="_blank">CV</a></li>
                                                 <!-- <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li> -->
                                           </ul>
 
